# traypp

./: CMakeLists.txt  README.md
tray/include/core/: icon.hpp  image.hpp  traybase.hpp
tray/include/core/linux/: tray.hpp
tray/include/core/windows/: tray.hpp
tray/src/core/linux/: tray.cpp
tray/src/core/windows/: tray.cpp
